// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should be rendered correctly with extra props 1`] = `
<fieldset
  className="uui-horizontal-direction root container"
>
  <label
    className="container root size-18 theme-light color-sky uui-disabled"
  >
    <div
      className="uui-checkbox"
    >
      <input
        aria-checked={false}
        checked={false}
        disabled={true}
        onChange={null}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      test1
    </div>
  </label>
  <label
    className="container root size-18 theme-light color-sky uui-disabled"
  >
    <div
      className="uui-checkbox uui-checked"
    >
      <input
        aria-checked={true}
        checked={true}
        disabled={true}
        onChange={null}
        type="checkbox"
      />
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#checkbox-checked.svg"
          />
        </svg>
      </div>
    </div>
    <div
      className="uui-input-label"
    >
      test2
    </div>
  </label>
</fieldset>
`;

exports[`CheckboxGroup should render with default props 1`] = `
<fieldset
  className="uui-vertical-direction root container"
>
  <label
    className="container root size-18 theme-light color-sky"
  >
    <div
      className="uui-checkbox uui-checked"
    >
      <input
        aria-checked={true}
        checked={true}
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#checkbox-checked.svg"
          />
        </svg>
      </div>
    </div>
    <div
      className="uui-input-label"
    >
      test1
    </div>
  </label>
  <label
    className="container root size-18 theme-light color-sky"
  >
    <div
      className="uui-checkbox"
    >
      <input
        aria-checked={false}
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      test2
    </div>
  </label>
</fieldset>
`;
